--- a/package.json
+++ b/package.json
@@ -21,17 +21,15 @@
   },
   "homepage": "https://github.com/Haskkor/react-native-recaptchav3#readme",
   "devDependencies": {
-    "@types/react": "^16.7.3",
-    "@types/react-native": "^0.57.7",
-    "react": "^16.6.2",
-    "react-native": "^0.57.4",
+    "@types/react": "^17.0.2",
+    "@types/react-native": "^0.66.4",
+    "react": "^17.0.2",
+    "react-native": "^0.66.4",
+    "react-native-webview": "^11.18.1",
     "typescript": "^3.1.6"
   },
   "peerDependencies": {
     "react": "*",
     "react-native": "*"
-  },
-  "dependencies": {
-    "react-native-webview": "^9.0.1"
   }
 }
